test/files/neg/literals.check
literals.scala:8: error: Non-zero integral values may not have a leading zero.
  def leadingZeros: Int  = { 01 }        // line 6: no leading zero
                             ^
literals.scala:10: error: Non-zero integral values may not have a leading zero.
  def tooManyZeros: Int  = { 00 }        // line 8: no leading zero
                             ^
literals.scala:12: error: Non-zero integral values may not have a leading zero.
  def zeroOfNine: Int    = { 09 }        // line 10: no leading zero
                             ^
literals.scala:16: error: malformed integer number
  def zeroOfNineDot: Int = { 09. }       // line 14: malformed integer, ident expected
                             ^
literals.scala:25: error: Non-zero integral values may not have a leading zero.
  def leadingZeros: Int  = 01            // line 24: no leading zero
                           ^
literals.scala:27: error: Non-zero integral values may not have a leading zero.
  def tooManyZeros: Int  = 00            // line 26: no leading zero
                           ^
literals.scala:29: error: Non-zero integral values may not have a leading zero.
  def zeroOfNine: Int    = 09            // line 28: no leading zero
                           ^
literals.scala:14: error: identifier expected but '}' found.
  def orphanDot: Int     = { 9. }        // line 12: ident expected
                                ^
literals.scala:16: error: identifier expected but '}' found.
  def zeroOfNineDot: Int = { 09. }       // line 14: malformed integer, ident expected
                                 ^
literals.scala:18: error: ';' expected but double literal found.
  def noHexFloat: Double = { 0x1.2 }     // line 16: ';' expected but double literal found.
                                ^
10 errors found
